add workaround for macos-14 build of tokenizers, additional allowed warnings required for python 3.12

--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -91,8 +91,8 @@ jobs:
           ${{ runner.os }}-pip-td${{ env.TIME_PERIOD }}-py${{ matrix.python-version }}-${{ matrix.release }}-${{ matrix.requires }}-
 
     - name: Install extra dependencies
-      # env:
-      #   PACKAGE_NAME: "pytorch"
+      env:  # workaround for macos tokenizers https://github.com/neonbjb/tortoise-tts/issues/728#issuecomment-1962438240
+        RUSTFLAGS: '-A invalid_reference_casting'
       run: |
         pip install --requirement requirements/base.txt --upgrade
         pip install --requirement requirements/examples.txt --upgrade
