disable mps testing for macos-14 until runner supports it

--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -93,6 +93,9 @@ jobs:
     - name: Install extra dependencies
       env:  # workaround for macos tokenizers https://github.com/neonbjb/tortoise-tts/issues/728#issuecomment-1962438240
         RUSTFLAGS: '-A invalid_reference_casting'
+        # TODO: Remove this and enable running MPS tests the macos runners support it:
+        # https://github.com/actions/runner-images/issues/9918#issuecomment-2149336099
+        DISABLE_MPS: ${{ matrix.os == 'macOS-14' && '1' || '0' }}
       run: |
         pip install --requirement requirements/base.txt --upgrade
         pip install --requirement requirements/examples.txt --upgrade
