refactor ci workflow macos runner workaround

--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -54,7 +54,12 @@ jobs:
         #   # - {os: ubuntu-22.04, python-version: "3.12", requires: "latest", release: "pre"}
 
     timeout-minutes: 90
-
+    env:
+      # workaround for macos tokenizers https://github.com/neonbjb/tortoise-tts/issues/728#issuecomment-1962438240
+      RUSTFLAGS: ${{ matrix.os == 'macOS-14' && '-A invalid_reference_casting' || '' }}
+      # TODO: Remove this and enable running MPS tests the macos runners support it:
+      # https://github.com/actions/runner-images/issues/9918#issuecomment-2149336099
+      DISABLE_MPS: ${{ matrix.os == 'macOS-14' && '1' || '0' }}
     steps:
     - uses: actions/checkout@v3
 
@@ -91,11 +96,8 @@ jobs:
           ${{ runner.os }}-pip-td${{ env.TIME_PERIOD }}-py${{ matrix.python-version }}-${{ matrix.release }}-${{ matrix.requires }}-
 
     - name: Install extra dependencies
-      env:  # workaround for macos tokenizers https://github.com/neonbjb/tortoise-tts/issues/728#issuecomment-1962438240
-        RUSTFLAGS: '-A invalid_reference_casting'
-        # TODO: Remove this and enable running MPS tests the macos runners support it:
-        # https://github.com/actions/runner-images/issues/9918#issuecomment-2149336099
-        DISABLE_MPS: ${{ matrix.os == 'macOS-14' && '1' || '0' }}
+      # env:  # workaround for macos tokenizers https://github.com/neonbjb/tortoise-tts/issues/728#issuecomment-1962438240
+      #   RUSTFLAGS: '-A invalid_reference_casting'
       run: |
         pip install --requirement requirements/base.txt --upgrade
         pip install --requirement requirements/examples.txt --upgrade
