--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -11,6 +11,7 @@ trigger:
     include:
       - "main"
       - "release/*"
+      - "model_parallel_exp_support"  # temporarily add for new test infra enhancement validation
       - "refs/tags/*"
   paths:
     include:
@@ -86,10 +87,20 @@ jobs:
         python -m coverage run --source src/finetuning_scheduler -m pytest src/finetuning_scheduler tests -v --junitxml=$(Build.Repository.LocalPath)/test-results.xml --durations=50
       displayName: 'Testing: standard'
 
+    # - bash: |
+    #     . /tmp/venvs/fts_dev/bin/activate
+    #     bash ./tests/standalone_tests.sh -k test_f
+    #   displayName: 'Testing: standalone multi-gpu'
+
     - bash: |
         . /tmp/venvs/fts_dev/bin/activate
-        bash ./tests/standalone_tests.sh -k test_f
+        bash ./tests/special_tests.sh --mark_type=standalone --filter_pattern='test_f'
       displayName: 'Testing: standalone multi-gpu'
+
+    # - bash: |
+    #     . /tmp/venvs/fts_dev/bin/activate
+    #     bash ./tests/special_tests.sh --mark_type=exp_patch --filter_pattern='test_f' --experiment_patch_mask="1 0 0"
+    #   displayName: 'Testing: experimental einsum patch'
 
     - bash: |
         . /tmp/venvs/fts_dev/bin/activate
