initial fts mp_examples implementation, unnest examples from fts_examples/stable to fts_examples

--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -130,7 +130,7 @@ jobs:
 
     # - name: Examples
     #   run: |
-    #     python -m pytest fts_examples/stable -v --durations=3
+    #     python -m pytest fts_examples -v --durations=3
 
     - name: Upload pytest results
       uses: actions/upload-artifact@v3
