--- a/src/fts_examples/model_parallel/config/fts_fsdp_auto_plan_noact_ckpt.yaml
+++ b/src/fts_examples/model_parallel/config/fts_fsdp_auto_plan_noact_ckpt.yaml
@@ -6,12 +6,12 @@ trainer:
       ft_schedule: ./config/defaults/ModParallelExample_ft_schedule.yaml
       max_depth: 2
       strategy_adapter_cfg:
-        fsdp_default_kwargs: {'act_ckpt': true}
-        fsdp_plan: {"model.output": {}, '^.*model.layers.\d*$': {}}
+        #fsdp_default_kwargs: {'act_ckpt': true}
+        fsdp_plan: {"model.output": {}, 'model.layers.\d*$': {}}
   strategy:
     init_args:
       data_parallel_size: 2
       tensor_parallel_size: 1
   logger:
     init_args:
-      name: fts_fsdp_auto_plan
+      name: fts_fsdp_auto_plan_noact_ckpt
