- added model parallel example testing to multi-gpu tests  - updated model parallel and memprofiler documentation  - ensure model parallel auto fsdp applies directives in order declared in plan  - adjust einsum pytorch dep patch location  - extended check_sync_dist usage to validate distributed checkpoint edge cases  - inspect model parallel edge cases and improve user feedback

--- a/src/fts_examples/model_parallel/config/fts_fsdp_profiling.yaml
+++ b/src/fts_examples/model_parallel/config/fts_fsdp_profiling.yaml
@@ -9,7 +9,7 @@ trainer:
         fsdp_default_kwargs:
           act_ckpt: ['composable']
           cpu_offload_policy: {}
-        fsdp_plan: {"model.output": {}, 'model.layers.\d*$': {}}
+        fsdp_plan: {'model.output': {}, 'model.layers.\d*$': {}, 'model': {}}
   strategy:
     init_args:
       data_parallel_size: 2
