--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -114,4 +114,10 @@ jobs:
         . /tmp/venvs/fts_dev/bin/activate
         python -m pytest src/fts_examples -v --maxfail=1 --durations=0 -W ignore:\`np.object\`:DeprecationWarning -W ignore:'`np.int` is':DeprecationWarning
       # condition: notIn(variables['scope'], '2.0.1')
-      displayName: 'Testing: examples'
+      displayName: 'Testing: Examples'
+
+    - script: |
+        . /tmp/venvs/fts_dev/bin/activate
+        bash ./tests/special_tests.sh --mark_type=standalone --collect_dir='src/fts_examples' --filter_pattern='model_parallel_examples'
+      # condition: notIn(variables['scope'], '2.0.1')
+      displayName: 'Testing: Multi-GPU Examples'
