--- a/src/fts_examples/model_parallel/config/profiling/memprofiler_demo.yaml
+++ b/src/fts_examples/model_parallel/config/profiling/memprofiler_demo.yaml
@@ -5,6 +5,7 @@ memprofiler_cfg:
   track_fsdp_mem: true
   fsdp_mem_track_module_depth: 3
   fsdp_mem_tracker_tabulate: true
+  fsdp_mem_tracker_root_module: 'model'
   #############################################################################
   # Example Custom MemProfiler Collection Directives
   #############################################################################
