--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -109,15 +109,18 @@ jobs:
         CODECOV_TOK: $(CODECOV_TOKEN)  # explicit mapping required for secret azure pipeline variables
       displayName: 'Statistics'
 
-    - script: |
+    - bash: |
         set -e
         . /tmp/venvs/fts_dev/bin/activate
         python -m pytest src/fts_examples -v --maxfail=1 --durations=0 -W ignore:\`np.object\`:DeprecationWarning -W ignore:'`np.int` is':DeprecationWarning
       # condition: notIn(variables['scope'], '2.0.1')
       displayName: 'Testing: Examples'
 
-    - script: |
+    - bash: |
         . /tmp/venvs/fts_dev/bin/activate
+        mkdir -p /__w/_temp/kernel_cache
         bash ./tests/special_tests.sh --mark_type=standalone --collect_dir='src/fts_examples' --filter_pattern='model_parallel_examples'
       # condition: notIn(variables['scope'], '2.0.1')
+      env:
+        PYTORCH_KERNEL_CACHE_PATH: "/__w/_temp/kernel_cache"
       displayName: 'Testing: Multi-GPU Examples'
