--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -39,7 +39,7 @@ formats:
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.10"
+    python: "3.12"
   apt_packages:
     - texlive-latex-extra
     - dvipng
@@ -53,6 +53,7 @@ build:
 python:
   install:
     - requirements: requirements/base.txt
+    - requirements: requirements/examples.txt
     - requirements: requirements/docs.txt
     - method: pip
       path: .
