--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,15 @@ norecursedirs = [
     "build",
     "docs",
 ]
-addopts = "--strict-markers --doctest-modules --color=yes --disable-pytest-warnings --ignore-glob='src/fts_examples/ipynb_src/*.py' --ignore='.actions/assistant.py'"
+
+# two sets of default options to allow periodic warnings pruning
+################################################################
+addopts = """--strict-markers --doctest-modules --color=yes --ignore-glob='src/fts_examples/ipynb_src/*.py'
+--ignore='.actions/assistant.py' --disable-pytest-warnings""" # comment during warnings pruning, otherwise uncomment
+# addopts = """--strict-markers --doctest-modules --color=yes --ignore-glob='src/fts_examples/ipynb_src/*.py'
+# --ignore='.actions/assistant.py'""" # uncomment during warnings pruning, otherwise comment
+################################################################
+
 junit_duration_report = "call"
 
 [tool.jupytext]
