--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -59,12 +59,12 @@ jobs:
       RUSTFLAGS: ${{ matrix.os == 'macOS-14' && '-A invalid_reference_casting' || '' }}
       # TODO: Remove this and enable running MPS tests the macos runners support it:
       # https://github.com/actions/runner-images/issues/9918#issuecomment-2149336099
-      DISABLE_MPS: ${{ matrix.os == 'macOS-14' && '1' || '0' }}
+      DISABLE_MPS: ${{ (matrix.os == 'macOS-14' && '1') || '0' }}
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
 
@@ -83,39 +83,28 @@ jobs:
 
     # Note: This uses an internal pip API and may not always work
     # https://github.com/actions/cache/blob/master/examples.md#multiple-oss-in-a-workflow
-    - name: Get pip cache dir
+    # sadly, this env var is not properly abstracted over OS platforms so we set it twice, the second time for windows
+    - name: Get pip cache dir windows
       id: pip-cache
-      run: echo "::set-output name=dir::$(pip cache dir)"
+      run: |
+        echo "PIP_CACHE_DIR=$(pip cache dir)" >> $GITHUB_OUTPUT
+        echo "PIP_CACHE_DIR=$(pip cache dir)" >> $env:GITHUB_OUTPUT
 
     - name: pip cache
       uses: actions/cache@v4
       with:
-        path: ${{ steps.pip-cache.outputs.dir }}
+        path: ${{ steps.pip-cache.outputs.PIP_CACHE_DIR }}
         key: ${{ runner.os }}-pip-td${{ env.TIME_PERIOD }}-py${{ matrix.python-version }}-${{ matrix.release }}-${{ matrix.requires }}-${{ hashFiles('requirements/base.txt') }}-${{ hashFiles('requirements/extra.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-td${{ env.TIME_PERIOD }}-py${{ matrix.python-version }}-${{ matrix.release }}-${{ matrix.requires }}-
 
     - name: Install extra dependencies
-      # env:  # workaround for macos tokenizers https://github.com/neonbjb/tortoise-tts/issues/728#issuecomment-1962438240
-      #   RUSTFLAGS: '-A invalid_reference_casting'
       run: |
         pip install --requirement requirements/base.txt --upgrade
         pip install --requirement requirements/examples.txt --upgrade
         pip install --requirement requirements/test.txt --upgrade
         pip list
       shell: bash
-
-    # - name: Install dependencies
-    #   run: |
-    #     flag=$(python -c "print('--pre' if '${{matrix.release}}' == 'pre' else '')" 2>&1)
-    #     url=$(python -c "print('test/cpu/torch_test.html' if '${{matrix.release}}' == 'pre' else 'cpu/torch_stable.html')" 2>&1)
-    #     pip install --requirement requirements.txt --upgrade $flag --find-links "https://download.pytorch.org/whl/${url}"
-    #     # adjust versions according installed Torch version
-    #     python ./requirements/adjust-versions.py requirements/examples.txt
-    #     pip install --requirement requirements/examples.txt --find-links https://download.pytorch.org/whl/cpu/torch_stable.html --upgrade
-    #     pip install --requirement requirements/test.txt --upgrade
-    #     pip list
-    #   shell: bash
 
     - name: Cache datasets
       uses: actions/cache@v4
@@ -133,7 +122,7 @@ jobs:
     #     python -m pytest fts_examples/stable -v --durations=3
 
     - name: Upload pytest results
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: pytest-results-${{ runner.os }}-${{ matrix.python-version }}-${{ matrix.requires }}-${{ matrix.release }}
         path: junit/test-results-${{ runner.os }}-${{ matrix.python-version }}-${{ matrix.requires }}-${{ matrix.release }}.xml
@@ -146,6 +135,8 @@ jobs:
         coverage xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       with:
         file: coverage.xml
         flags: cpu,pytest,python${{ matrix.python-version }}
