--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -94,7 +94,7 @@ jobs:
 
     - bash: |
         . /tmp/venvs/fts_dev/bin/activate
-        bash ./tests/special_tests.sh --mark_type=exp_patch --filter_pattern='test_f' --experiment_patch_mask="1 0 0"
+        bash ./tests/special_tests.sh --mark_type=exp_patch --filter_pattern='test_f' --experiment_patch_mask="1 0 0 1"
       displayName: 'Testing: experimental einsum patch'
 
     - bash: |
