- refactored new `log_dir` param to be a property to encapsulate different trainer fall back modes - updated schedule generation documentation to include new FTS `log_dir` param ref - added mlflow to default test extra directive - added tests for new FTS `log_dir` param - disabled a flaky (10%) 2D model parallel test with limited marginal utility

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ lightning_logs/
 # ignore ipynb files themselves since we want to only store the source *.py
 *.ipynb
 
+# SQLite database files
+*.db
+
 # Test-tube
 test_tube_*/
 
