--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,11 @@ requires = [
 [tool.ruff]
 line-length = 120
 # Enable Pyflakes `E` and `F` codes by default.
-select = [
+lint.select = [
     "E", "W",  # see: https://pypi.org/project/pycodestyle
     "F",  # see: https://pypi.org/project/pyflakes
 ]
-ignore = [
+lint.ignore = [
     "E731", # Do not assign a lambda expression, use a def
 ]
 # Exclude a variety of commonly ignored directories.
@@ -23,7 +23,7 @@ exclude = [
     "build",
     "temp",
 ]
-ignore-init-module-imports = true
+lint.ignore-init-module-imports = true
 output-format = "pylint"
 
 [tool.ruff.per-file-ignores]
