--- a/.github/workflows/release-pypi.yml
+++ b/.github/workflows/release-pypi.yml
@@ -31,7 +31,8 @@ jobs:
         python-version: '3.12'
 
     - name: Install dependencies
-      run: >-
+      # note we should upgrade packaging to address https://github.com/pypa/twine/issues/1216 once setuptools>=77
+      run: |
         python -m pip install --user --upgrade build
 
     - name: Build packages
