- Broadly enhanced build infrastructure, allowing dynamic versioning both at installation time and via CLI post installation.
- **New Feature**:
  - Initially, the dynamic versioning system allows toggling between Lightning unified and standalone imports.
  - The two conversion operations are individually idempotent and mutually reversible.
  - utils.py - Core import conversion functionality
  - toggle_lightning_mode.py - CLI tool

- **Package Configuration**: Modernized pyproject.toml to use PEP 639 metadata
- **Dependencies**: Replaced hardcoded Lightning dependencies with dynamic detection system
- **Version Handling**: Added support for dynamic requirements via commit pins
- **Entry Points**: Added CLI command registration for `toggle-lightning-mode` utility

- **Environment Variables**: Added `USE_CI_COMMIT_PIN="1"` to GitHub workflows and Azure pipelines
- **Docker**: Updated base-cuda Dockerfile to use commit pins and upgrade setuptools

- **New File**: Added lightning_pin.txt to track specific Lightning commits
- **Removed**: Deleted standalone base requirements file in favor of dynamic generation
- **Build**: Enhanced setup.py to handle different Lightning import styles

- **Removed**: Cleaned up deprecated code from assistant.py
- **Packaging**: Updated MANIFEST.in to exclude tests directory and include toggle script

--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -71,15 +71,15 @@ jobs:
         . /tmp/venvs/fts_dev/bin/activate
         pip install --upgrade pip requests setuptools
         pip install -e . --no-warn-script-location --requirement requirements/devel.txt
-        pip install lightning --upgrade
-      #env:
-        #PACKAGE_NAME: "pytorch"
+        # pip install lightning --upgrade
+      env:
+        USE_CI_COMMIT_PIN: "1"
       displayName: 'Install dependencies'
 
     - bash: |
         . /tmp/venvs/fts_dev/bin/activate
         python requirements/collect_env_details.py
-        python -c "import torch ; mgpu = torch.cuda.device_count() ; assert mgpu >= 2, f'GPU: {mgpu}'"
+        python -c "import torch ; print(f'PyTorch CUDA version: {torch.version.cuda}') ; mgpu = torch.cuda.device_count() ; assert mgpu >= 2, f'GPU: {mgpu}'"
       displayName: 'Env details'
 
     - bash: |
