--- a/.github/workflows/release-pypi.yml
+++ b/.github/workflows/release-pypi.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Install dependencies
       run: >-
-        python -m pip install --user --upgrade build
+        python -m pip install --user --upgrade build twine setuptools
 
     - name: Build packages
       run: |
