--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,8 @@ recursive-exclude __pycache__  *.py[cod] *.orig lightning_logs
 prune src/fts_examples/ipynb_src
 # exclude fts_examples tests
 exclude src/fts_examples/test_examples.py
+# Exclude tests directory
+prune tests
 # Include the README and CHANGELOG
 include *.md
 # Include the license file
@@ -13,6 +15,8 @@ include .actions/assistant.py
 include *.cff
 # Include marker file for PEP 561
 include src/finetuning_scheduler/py.typed
+# Explicitly include the toggle script to ensure entry points work
+include src/finetuning_scheduler/dynamic_versioning/toggle_lightning_mode.py
 # Include the Requirements
 recursive-include requirements *.txt
 include requirements.txt
