--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,70 @@
 [build-system]
+# we require a setuptools version with PEP 639 support
 requires = [
-    "setuptools",
+    "setuptools>=77.0.0",
     "wheel",
 ]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "finetuning-scheduler"
+dynamic = ["version", "description", "readme", "dependencies", "optional-dependencies"]
+authors = [{name = "Daniel Dale", email = "danny.dale@gmail.com"}]
+license = "Apache-2.0"
+license-files = ["LICENSE*"]
+requires-python = ">=3.9"
+keywords = [
+    "deep learning",
+    "pytorch",
+    "AI",
+    "machine learning",
+    "pytorch-lightning",
+    "lightning",
+    "fine-tuning",
+    "finetuning",
+]
+classifiers = [
+    "Environment :: Console",
+    "Natural Language :: English",
+    "Development Status :: 5 - Production/Stable",
+    "Intended Audience :: Developers",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Scientific/Engineering :: Image Recognition",
+    "Topic :: Scientific/Engineering :: Information Analysis",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+]
+
+[project.urls]
+"Homepage" = "https://github.com/speediedan/finetuning-scheduler"
+"Bug Tracker" = "https://github.com/speediedan/finetuning-scheduler/issues"
+"Documentation" = "https://finetuning-scheduler.readthedocs.io/en/stable/"
+"Source Code" = "https://github.com/speediedan/finetuning-scheduler"
+
+[project.scripts]
+toggle-lightning-mode = "finetuning_scheduler.dynamic_versioning.toggle_lightning_mode:main"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+include-package-data = true
+zip-safe = false
+
+[tool.setuptools.packages.find]
+where = ["src"]
+namespaces = true
+
+[tool.setuptools.package-data]
+"fts_examples.config" = ["*.yaml"]
+"fts_examples.config.advanced.fsdp" = ["*.yaml"]
+"fts_examples.config.advanced.reinit_lr" = ["*.yaml"]
+"fts_examples.config.advanced.reinit_optim_lr" = ["*.yaml"]
+"fts_examples.model_parallel.config" = ["*.yaml"]
+"fts_examples.model_parallel.config.defaults" = ["*.yaml"]
+"fts_examples.model_parallel.config.profiling" = ["*.yaml"]
 
 [tool.ruff]
 line-length = 120
@@ -23,7 +85,7 @@ exclude = [
     "build",
     "temp",
 ]
-lint.ignore-init-module-imports = true
+# lint.ignore-init-module-imports = true
 output-format = "pylint"
 
 [tool.ruff.per-file-ignores]
